updated project descriptions to cover descriptions

--- a/templates/project/project_showcase.html
+++ b/templates/project/project_showcase.html
@@ -16,7 +16,7 @@
                 <div class="project_card">
                     <h1>{{ project.title }}</h1>
                     <img src="{{ project.cover_image.url }}" alt="{{ project.title }}'s cover image">
-                    <p class="description">{{ project.description }}</p>
+                    <p class="description">{{ project.cover_description }}</p>
                     <a href="/projects/{{ project.title }}/">
                         <button type="button" class="more-button">More ↗</button>
                     </a>
