--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <div class="Introduction">
             <h1>Hello, I am {{ person.first_name }} {{ person.last_name }}!</h1>
             <img src="{{ person.picture_background_removed.url }}" alt="image of me with background removed">
-            <p>{{ homepageinfo.introduction_description }}</p>
+            <p class="-center">{{ homepageinfo.introduction_description }}</p>
             <div class="bottom_space"></div>
         </div>
     </div>
