linked the new cloned css file

--- a/templates/service/service_preview.html
+++ b/templates/service/service_preview.html
@@ -3,7 +3,7 @@
 
 {% block head %}
     <title>{{ project.title }}</title>
-    <link rel="stylesheet" href="{% static 'css/project_preview.css' %}">
+    <link rel="stylesheet" href="{% static 'css/service_preview.css' %}">
 {% endblock head %}
 
 {% block content %}
