--- a/templates/service/service_showcase.html
+++ b/templates/service/service_showcase.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/project_showcase.css' %}">
+    <link rel="stylesheet" href="{% static 'css/service_showcase.css' %}">
     <title>Yaksh's Projects</title>
 {% endblock head %}
 
