--- a/templates/service/service_preview.html
+++ b/templates/service/service_preview.html
@@ -2,35 +2,31 @@
 {% load static %}
 
 {% block head %}
-    <title>{{ project.title }}</title>
+    <title>{{ CommunityService.title }}</title>
     <link rel="stylesheet" href="{% static 'css/service_preview.css' %}">
 {% endblock head %}
 
 {% block content %}
     <div class="page">
         <div class="project">
-            <h1>{{ project.title }}</h1>
-            <img src="{{ project.cover_image.url }}" alt="{{ project.title }}'s cover image">
-            <p>{{ project.description }}</p>
-            <h2>References Used:</h2>
-            <p>{{ project.references }}</p>
-            <h2>Discipline Of Work:</h2>
-            <p>{{ project.discipline_of_work }}</p>
+            <h1>{{ CommunityService.title }}</h1>
+            <img src="{{ CommunityService.cover_image.url }}" alt="{{ CommunityService.title }}'s cover image">
+            <p>{{ CommunityService.description }}</p>
             <h2>Youtube:</h2>
-            <iframe src="https://www.youtube-nocookie.com/embed/{{ project.youtube_video }}"
+            <iframe src="https://www.youtube-nocookie.com/embed/{{ CommunityService.youtube_video }}"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </div>
         <div class="gallery">
             <h2>Gallery:</h2>
-            {% if project.image_1 %}<a href="{{ project.image_1.url }}" target="_blank"><img src="{{ project.image_1.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_2 %}<a href="{{ project.image_2.url }}" target="_blank"><img src="{{ project.image_2.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_3 %}<a href="{{ project.image_3.url }}" target="_blank"><img src="{{ project.image_3.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_4 %}<a href="{{ project.image_4.url }}" target="_blank"><img src="{{ project.image_4.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_5 %}<a href="{{ project.image_5.url }}" target="_blank"><img src="{{ project.image_5.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_6 %}<a href="{{ project.image_6.url }}" target="_blank"><img src="{{ project.image_6.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
-            {% if project.image_7 %}<a href="{{ project.image_7.url }}" target="_blank"><img src="{{ project.image_7.url }}" alt="{{ project.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_1 %}<a href="{{ CommunityService.image_1.url }}" target="_blank"><img src="{{ CommunityService.image_1.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_2 %}<a href="{{ CommunityService.image_2.url }}" target="_blank"><img src="{{ CommunityService.image_2.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_3 %}<a href="{{ CommunityService.image_3.url }}" target="_blank"><img src="{{ CommunityService.image_3.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_4 %}<a href="{{ CommunityService.image_4.url }}" target="_blank"><img src="{{ CommunityService.image_4.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_5 %}<a href="{{ CommunityService.image_5.url }}" target="_blank"><img src="{{ CommunityService.image_5.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_6 %}<a href="{{ CommunityService.image_6.url }}" target="_blank"><img src="{{ CommunityService.image_6.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
+            {% if CommunityService.image_7 %}<a href="{{ CommunityService.image_7.url }}" target="_blank"><img src="{{ CommunityService.image_7.url }}" alt="{{ CommunityService.title }}'s other image"></a>{% endif %}
         </div>
     </div>
 
