--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -39,7 +39,7 @@
     </a>
     <a title="Projects" href="/projects">🤖</a>
     <a title="Academics" href="/academics/">💯</a>
-    <a title="Research & Development" href="/">📃</a>
+    <a title="Community Services" href="/services/">👣</a>
     <a title="About & Contact" href="/about">🧑</a>
     <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">
         <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
