moved social media links to navbar (top); updated the instagram logo to png file for max compatibility

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -4,14 +4,14 @@
 <header class="navbar">
     <div class="home_socials">
         <a href="/" class="header_links"><img src="{% static 'img/header.png' %}" alt="Home"></a>
-{#        <div class="social_links">#}
-{#            <a href="https://www.instagram.com/_yaksh396.phs/" class="social_links_img">#}
-{#                <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">#}
-{#            </a>#}
-{#            <a href="https://yakshsjournal.blogspot.com/" class="social_links_img">#}
-{#                <img src="{% static 'img/blogger.png' %}" alt="Blog">#}
-{#            </a>#}
-{#        </div>#}
+        <div class="social_links">
+            <a href="https://www.instagram.com/_yaksh396.phs/" class="social_links_img">
+                <img src="{% static 'img/Instagram_logo.png' %}" alt="Instagram">
+            </a>
+            <a href="https://yakshsjournal.blogspot.com/" class="social_links_img">
+                <img src="{% static 'img/blogger.png' %}" alt="Blog">
+            </a>
+        </div>
     </div>
 
 {#    <a class="nav_links" href="/links/">Links</a>#}
@@ -41,10 +41,10 @@
     <a title="Academics" href="/academics/">💯</a>
     <a title="Community Services" href="/services/">👣</a>
     <a title="About & Contact" href="/about">🧑</a>
-    <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">
-        <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
-    </a>
-    <a href="https://yakshsjournal.blogspot.com/" class="social_media_images_docks">
-        <img src="{% static 'img/blogger.png' %}" alt="Blog">
+{#    <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">#}
+{#        <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">#}
+{#    </a>#}
+{#    <a href="https://yakshsjournal.blogspot.com/" class="social_media_images_docks">#}
+{#        <img src="{% static 'img/blogger.png' %}" alt="Blog">#}
     </a>
 </div>
