--- a/main/static/css/navbar.css
+++ b/main/static/css/navbar.css
@@ -43,15 +43,17 @@ li {
     border-radius: 10px;
     font-size: 1.5rem;
     color: antiquewhite;
-    margin: 5px 1.5% 5px 5px;
+    margin: 5px 1.5% 5px 0;
     border: none;
     background: none;
-    padding: 16px;
+    padding: 16px 16px 16px 0;
 }
 
 .home_socials {
     display: flex;
     flex-wrap: wrap;
+    left: 18px;
+    position: relative;
 }
 
 .header_links img {
@@ -59,21 +61,28 @@ li {
 }
 
 .header_links {
-    transform: translate(17.5%, 0);
+    /*transform: translate(17.5%, 0);*/
     /*margin-right: 17.5%;*/
 }
 
 .social_links {
-    transform: translate(30px, 0);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 3px;
 }
 
 .social_links a {
-    padding: 10px;
+    text-align: center;
+    height: 1.75rem;
+    margin: 0;
+    padding: 3px;
 }
 
 .social_links img {
-    height: 3rem;
-    transform: translate(3px, 45%);
+    height: 1.75rem;
+    margin: 0;
+    padding: 0;
 }
 
 .sidebar {
