--- a/main/static/css/project_showcase.css
+++ b/main/static/css/project_showcase.css
@@ -23,7 +23,7 @@
 }
 
 .project_card h1 {
-    font-size: 50px;
+    font-size: 3.2rem;
     font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
     margin: 15px;
