--- a/main/static/css/service_preview.css
+++ b/main/static/css/service_preview.css
@@ -26,7 +26,7 @@
 .project h1{
     font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
-    font-size: 75px;
+    font-size: 3.4rem;
     margin: 0 0 20px 0;
 }
 
