--- a/main/static/css/service_showcase.css
+++ b/main/static/css/service_showcase.css
@@ -26,7 +26,7 @@
     font-size: 50px;
     font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
-    margin: 15px;
+    margin: 3.2rem;
 }
 
 .project_card p {
