--- a/main/static/css/service_showcase.css
+++ b/main/static/css/service_showcase.css
@@ -23,10 +23,10 @@
 }
 
 .project_card h1 {
-    font-size: 50px;
+    font-size: 2.5rem;
     font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
-    margin: 3.2rem;
+    margin: 15px;
 }
 
 .project_card p {
