--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -20,6 +20,7 @@ body {
     /*background-attachment: fixed;*/
     /*!*background-size: cover;*!*/
     color: antiquewhite;
+    font-family: "San Fransisco", sans-serif;
 }
 
 .-center {
