--- a/main/static/css/academics.css
+++ b/main/static/css/academics.css
@@ -3,15 +3,15 @@ body {
 }
 
 .timeline {
-    margin: 0 auto;
-    width: 92%;
-    padding: 30px;
+    margin: 0;
+    width: 90%;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr 4px 3fr;
 }
 
 .timeline__component {
-    margin: 0 20px 20px 20px;
+    margin: 0 12px 12px 12px;
 }
 
 .timeline__component-bg {
