remove text back from navbar, just keep the icon

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -15,7 +15,7 @@
     </div>
 
 {#    <a class="nav_links" href="/links/">Links</a>#}
-    <a class="nav_links" href="javascript:history.back()">↖ Back</a>
+    <a class="nav_links" href="javascript:history.back()">↖</a>
 
 {#    <ul class="nav_links">#}
 {#        <li><a href="/">Home</a></li>#}
