updated the styling for interests & hobbies on the home page.

--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -51,8 +51,16 @@ body {
     width: 95%;
     height: auto;
     align-items: center;
+    justify-items: center;
 }
 
 .bottom_space {
     height: 100px;
+}
+
+.Introduction p {
+    width: 85%;
+    position: relative;
+    left: 50%; transform: translateX(-50%);
+    text-align: center;
 }
