changed url of projects to academics

--- a/templates/academics/academics.html
+++ b/templates/academics/academics.html
@@ -17,7 +17,7 @@
                     <h1>{{ achievement.title }}</h1>
                     <img src="{{ achievement.cover_image.url }}" alt="{{ achievement.title }}'s cover image">
                     <p class="description">{{ achievement.cover_description }}</p>
-                    <a href="/projects/{{ achievement.title }}/">
+                    <a href="/academics/{{ achievement.title }}/">
                         <button type="button" class="more-button">More ↗</button>
                     </a>
                 </div>
