updated heading styling

--- a/templates/academics/academics.html
+++ b/templates/academics/academics.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="page">
         <div class="basic-info">
-            <h1>My Academic Achievements</h1>
+            <h1 style="margin: 5px 0 10px 0;">My Academic Achievements</h1>
         </div>
 
         <div class="projects">
