--- a/main/static/css/academics.css
+++ b/main/static/css/academics.css
@@ -71,8 +71,8 @@ body {
 }
 
 .basic-info h1 {
-    font-family: "Abril FatFace", sans-serif;
-    font-weight: 200;
+    /*font-family: "Abril FatFace", sans-serif;*/
+    font-size: 3.4rem;
 }
 
 .projects {
