--- a/templates/project/project_preview.html
+++ b/templates/project/project_preview.html
@@ -21,8 +21,10 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
+            {% if project.PDF_file %}
             <h2>Download PDF for this project:</h2>
             <a href="{{ project.PDF_file.url }}" download="{{ project.title }} - Yaksh Patel.pdf">Download PDF of {{ project.title }} - Click Here.</a>
+            {% endif %}
         </div>
         <div class="gallery">
             <h2>Gallery:</h2>
