added travel icon

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -41,6 +41,7 @@
     <a title="Academics" href="/academics/">💯</a>
     <a title="Community Services" href="/services/">👣</a>
     <a title="About & Contact" href="/about">🧑</a>
+    <a title="Travels" href="/travel">🌎</a>
 {#    <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">#}
 {#        <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">#}
 {#    </a>#}
