--- a/main/static/css/travel.css
+++ b/main/static/css/travel.css
@@ -7,6 +7,7 @@
     left: 50%; top: 65px;
     transform: translate(-50%,0);
     margin-top: 20px;
+    padding-bottom: 75px;
 }
 
 .Travel-Images {
@@ -16,4 +17,5 @@
 
 .Travel-Images img {
     width: 90%;
+    border-radius: 25px;
 }
